@@ -321,6 +321,18 @@ void define_agenda_data()
         "Discuss *y* vs *yf*. \n"
         ),
        OUTPUT( "y", "jacobian" ),
+       INPUT( "x", "jacobian_do" )));
+
+  agenda_data.push_back
+    (AgRecord
+     ( NAME( "inversion_iterate_agenda_old" ),
+       DESCRIPTION
+       (
+        "So far just testing ...\n"
+        "\n"
+        "Discuss *y* vs *yf*. \n"
+        ),
+       OUTPUT( "y", "jacobian" ),
        INPUT( "jacobian_do", "jacobian_quantities", "jacobian_indices", "x", 
               "vmr_field", "t_field" )));
 
