@@ -1675,6 +1675,15 @@ void Workspace::define_wsv_data()
         ),
        GROUP( "Agenda" )));
 
+ wsv_data.push_back
+    (WsvRecord
+     ( NAME( "inversion_iterate_agenda_old" ),
+       DESCRIPTION
+       (
+        "Agenda recalculating spectra and Jacobian for iterative inversion methods.\n"
+        ),
+       GROUP( "Agenda" )));
+
     wsv_data.push_back
     (WsvRecord
     ( NAME( "isotopologue_quantum" ),
