@@ -1,3 +1,14 @@
+2015-09-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-312
+
+	* src/m_oem.cc (oem): inversion_iterate_agenda_old used by ml and
+	gn, while li uses inversion_iterate_agenda.
+
+	* src/agendas.cc: Introduced inversion_iterate_agenda_old as a
+	temporary solution. Changed set of input arguments to
+	inversion_iterate_agenda.
+
 2015-09-18  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-311
